上传至码云

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/tinker": "~1.0",
         "mews/captcha": "~2.0",
         "overtrue/laravel-lang": "~3.0",
-        "overtrue/pinyin": "~3.0"
+        "overtrue/pinyin": "~3.0",
+        "spatie/laravel-permission": "~2.7",
+        "viacreative/sudo-su": "~1.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
